Make text wrapping better (can specify number, 'off' or 'auto'), output version when starting up, make config loading a little more robust.

--- a/gribbit.cfg
+++ b/gribbit.cfg
@@ -1,7 +1,8 @@
 [gribbit]
 catch_hup = True
 log_debug = False
-text_wrap = True
+# Which column to wrap at; auto, for automatic; off if you don't want wrapping
+text_wrap = auto
 
 [updates]
 # how often in minutes
