Add timezone understanding, defaults to London. Closes #12

--- a/gribbit.cfg
+++ b/gribbit.cfg
@@ -3,6 +3,8 @@ catch_hup = True
 log_debug = False
 # Which column to wrap at; auto, for automatic; off if you don't want wrapping
 text_wrap = auto
+# You'll need to change this for your local timezone.
+timezone = Europe/London
 
 [updates]
 # how often in minutes
